[gd_scene load_steps=8 format=3 uid="uid://1uoweixqd82v"]

[ext_resource type="Script" uid="uid://c434k3xfdxkrw" path="res://scrips/Game/player/skills/star.gd" id="1_v3jqq"]
[ext_resource type="Texture2D" uid="uid://30f2kjggl8l4" path="res://asset/image/Skill/star/star_00001.png" id="2_kv11n"]
[ext_resource type="Shape2D" uid="uid://ch2ubn5yx8axy" path="res://resource/stars_shape.tres" id="3_3xsc5"]
[ext_resource type="AnimationLibrary" uid="uid://bgoydfpjh1qt6" path="res://resource/AnimationRoot/Animation/Library/StarAnimation.res" id="4_fhgxi"]
[ext_resource type="Script" uid="uid://d2t5myp5pulfg" path="res://scrips/Game/player/component/flight/flight_component.gd" id="6_aqolw"]
[ext_resource type="Script" uid="uid://d2i123i0ly6kg" path="res://scrips/Game/player/component/attack/flight_attack_component.gd" id="6_v3jqq"]
[ext_resource type="AudioStream" uid="uid://bbduf0xo2tr6r" path="res://scenes/OldMan/TrashMan/确认音效.wav" id="7_kv11n"]


[node name="StarsArea" type="Area2D" node_paths=PackedStringArray("animation_player", "flight_component", "flight_attack_component") groups=["Hurtbox"]]
collision_layer = 16
collision_mask = 32
script = ExtResource("1_v3jqq")
animation_player = NodePath("AnimationPlayer")
flight_component = NodePath("FlightComponent")
flight_attack_component = NodePath("FlightAttackComponent")

[node name="Stars" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_kv11n")
offset = Vector2(2.1395, -48.9594)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = ExtResource("3_3xsc5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"StarAnimation": ExtResource("4_fhgxi")
}

[node name="FlightComponent" type="Node2D" parent="."]
script = ExtResource("6_aqolw")
speed = 600.0
lifetime_timer = 2.0
metadata/_custom_type_script = "uid://d2t5myp5pulfg"

[node name="FlightAttackComponent" type="Node2D" parent="."]
script = ExtResource("6_v3jqq")
ATK = 30
metadata/_custom_type_script = "uid://d2i123i0ly6kg"

[node name="StarsAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kv11n")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
